# StepperControllerPCB

./: .gitignore  readme.md
Firmware/: CMakeLists.txt
Firmware/main/: CMakeLists.txt  main.cpp
Firmware/main/include/: MotorController.hpp  Server.hpp  TMC2209.hpp
Firmware/main/src/: MotorController.cpp  Server.cpp  TMC2209.cpp
hardware/PCB/: RobotArmPCB.kicad_pcb  RobotArmPCB.kicad_pro  RobotArmPCB.kicad_sch
